--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,11 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/Financas-pessoais/fnp-cfg-config
+          uri: ${REPOSITORY_URL}
+          username: ${GITHUB_USER}
+          password: ${GITHUB_PASSWORD}
+          default-label: ${GITHUB_BRANCH}
+          clone-on-start: true
           search-paths:
             - '{application}'
 
